# obmota

./: .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: github-actions.yml
src/obmota/: TripData.py  __init__.py
src/obmota/cli/: core.py
tests/unit/: test_TripData.py
