[build-system]
requires = ["setuptools >= 40.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obmota"
description = "OBM OTA Utility package for Euro 7 - 2024/1257"
readme = "README.md"
dynamic = ["version"]
authors = [{ name="Gabriele Omodeo Vanone", email = "mail@gabrieleomodeo.it" }]
maintainers = [{ name = "obmota contributors" }]
dependencies = [
    "attrs>=19.2.0",
    "click",
    "importlib-metadata; python_version < '3.8'",
    "typing; python_version < '3.5'",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/daemonPainter/obmota"
Issues = "https://github.com/daemonPainter/obmota/issues"

[project.scripts]
obmota = "obmota.cli.core:cli"

[tool.setuptools.dynamic]
version = {attr = "obmota.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]